# ascii_doom

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  cfg.txt
enc_temp_folder/729a8c4d11230a6a6df25877bf5fa3/: main_doom.c
res/: Alatter.tex  Eletter.tex  Hletter.tex  Lletter.tex  Mletter.tex  Oletter.tex  Tletter.tex  ammo.tex  barrel.tex  bullet1.tex  bullet2.tex  bullet_mob.tex  cfg.txt  door1.tex  eight.tex  face.tex  first_aid.tex  five.tex  four.tex  graph.txt  main_room.txt  map.txt  mob1.tex  mob1_back.tex  mob1_side1.tex  mob1_side2.tex  nine.tex  one.tex  seven.tex  six.tex  start_room.txt  three.tex  two.tex  wall1.tex  wall2.spr  wall2.tex  wall3.spr  zero.tex
src/: UI.c  UI.h  barrel.c  barrel.h  bullet.c  bullet.h  config.c  config.h  drop.c  drop.h  enemy.c  enemy.h  explosion.c  explosion.h  logging.c  logging.h  main_doom.c  map.txt  map_generator.c  map_generator.h  music.c  music.h  player.c  player.h  render.c  render.h  rendering.c  rendering.h  rocket.c  rocket.h  sprite.c  sprite.h  sprite_editor.c  structs_of_data.c  structs_of_data.h  weapon.c  weapon.h  world_object.c  world_object.h
